samples/_failures_safe/1761416110_a2c3b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0472ec2b.c: In function ‘main’:
./samples/SAFE/__tmp_0472ec2b.c:133:9: error: expected declaration or statement at end of input
  133 |         printf("No valid log entries found.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_0472ec2b.c:133:9: error: expected declaration or statement at end of input
